...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:lineHeight="16sp"
        android:padding="4dp"
        android:paddingStart="20dp"
...
        app:srcCompat="@drawable/ic_search"
        app:layout_constraintTop_toTopOf="@id/et_search"
        app:layout_constraintBottom_toBottomOf="@id/et_search"
        app:layout_constraintStart_toStartOf="@id/et_search"/>

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/icon_search"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_close"
...
